--- a/src/scss/_tools.color-variables.scss
+++ b/src/scss/_tools.color-variables.scss
@@ -4,9 +4,9 @@ $c-gray: #ccc;
 $c-footer-text: #3A3A3A;
 
 $set1: (
-  top: #d8f0e0,
-  middle: #48acbf,
-  bottom: #452098
+  top: #CBF3FF,
+  middle: #50B7C8,
+  bottom: #A550C8
 );
 
 $set2: (
@@ -15,16 +15,46 @@ $set2: (
   bottom: #004a76
 );
 
+$set2-a: (
+  top: #0E4C72,
+  bottom: #307996
+);
+
+$set2-b: (
+  top: #CADDC7,
+  bottom: #7ABCBD
+);
+
 $set3: (
-  top: #ffe5e5,
-  middle: #4a9dae,
-  bottom: #0a1582
+  top: #F0E7C9,
+  middle: #D37869,
+  bottom: #562493
+);
+
+$set3-a: (
+  top: #784284,
+  bottom: #562F8F
+);
+
+$set3-b: (
+  top: #E6C7B1,
+  bottom: #DDA896
 );
 
 $set4: (
   top: #ffe6e6,
   middle: #a370aa,
   bottom: #0a1582
+);
+
+$set4-a: (
+  top: #624E9A,
+  bottom: #0F207E
+);
+
+$set4-b: (
+  top: #DEBFD2,
+  bottom: #A173A8
 );
 
 $set5: (
@@ -58,27 +88,29 @@ $set5: (
   }
 }
 
-@mixin stacked-bar-chart-themer($set, $count) {
-  $top: map-get($set, top);
-  $middle: map-get($set, middle);
-  $bottom: map-get($set, bottom);
+@mixin stacked-bar-chart-themer($set-a, $set-b, $count) {
+  $top-a: map-get($set-a, top);
+  $bottom-a: map-get($set-a, bottom);
+
+  $top-b: map-get($set-b, top);
+  $bottom-b: map-get($set-b, bottom);
 
   .cmp-stacked-chart__key--1-3::before {
-    background: linear-gradient(to bottom, mix($middle, $top, 95%), $top);
+    background: linear-gradient($top-a, $bottom-a);
   }
 
   .cmp-stacked-chart__key--4-5::before {
-    background: linear-gradient(to bottom, $bottom, mix($middle, $bottom, 95%));
+    background: linear-gradient($top-b, $bottom-b);
   }
 
   @for $i from 1 through $count {
 
     .cmp-stacked-chart__entry--#{$i} .cmp-stacked-chart__bar--1-3 {
-      background-color: mix($top, mix($middle, $top, 95%), (($i - 1) / $count) * 100%);
+      background-color: mix($bottom-a, $top-a, (($i - 1) / $count) * 100%);
     }
 
     .cmp-stacked-chart__entry--#{$i} .cmp-stacked-chart__bar--4-5 {
-      background-color: mix(mix($middle, $bottom, 95%), $bottom, (($i - 1) / $count) * 100%);
+      background-color: mix($bottom-b, $top-b, (($i - 1) / $count) * 100%);
     }
   }
 }
